--- a/main.html
+++ b/main.html
@@ -153,6 +153,8 @@
 			<!-- Include a Link to your App's Connect Page -->
 			<div>
                 <a id="devpage" href="http://factory.snapback-apps.com/app/platform-installation/" title="Connect with Developers" style="text-decoration:none">Connect with Developers Here!</a>
+				&nbsp;|&nbsp;
+				<a id="webapp" href="http://snapback-apps.com/oominstaller/main.html" title="View this App on the Web and in your Browser">View App on the Web</a>
    			</div>
 			<!-- End Connect Link -->
 	<!-- End App Title -->
@@ -363,9 +365,9 @@
 	<h3>Tell the developers:</h3>
 	<p>Don't worry about editing our pages, they are moderated, so you don't edit the live page.</p>
 	<ul>
-		<li><a id="uicontent" href="#" title="Your App's UI & Content Page"> UI & Content</a> - Request changes in the content or look of our App by editing a moderated version of the UI and Content page.</li>
-		<li><a id="requestfeature" href="#" title="Your App's Feature Request Page"> Request a Feature</a> - Want something extra? Request it by editing a moderated version of our Feature Request page.</li>
-		<li><a id="reportbug" href="#" title="Your App's Issues and Bugs Page"> Report a Bug or Issue</a> - Find something that does not work right? Report your bug or issue by editing a moderated version of the bug reporting page.</li>
+		<li><a id="uicontent" href="http://factory.snapback-apps.com/app/platform-installation/ui-content/" title="Platform Installation UI & Content Page"> UI & Content</a> - Request changes in the content or look of our App by editing a moderated version of the UI and Content page.</li>
+		<li><a id="requestfeature" href="http://factory.snapback-apps.com/app/platform-installation/request-new-features/" title="Platform Installation Feature Request Page"> Request a Feature</a> - Want something extra? Request it by editing a moderated version of our Feature Request page.</li>
+		<li><a id="reportbug" href="http://factory.snapback-apps.com/app/platform-installation/issues-bugs/" title="Platform Installation Issues and Bugs Page"> Report a Bug or Issue</a> - Find something that does not work right? Report your bug or issue by editing a moderated version of the bug reporting page.</li>
 	</ul>
 
 	<h3>We Appreciate your Help!</h3>
