--- a/main.html
+++ b/main.html
@@ -132,7 +132,8 @@
             }
          }
       }
-	</script>
+</script>
+<script type="text/javascript" src="../common/scripts/onlinecheck.js"></script>
 <!-- ************************************************ -->
 <!--               END: Required Scripts              -->
 <!-- ************************************************ -->
