main.html Changes
Corrected an extra div that was causing formatting problems.

--- a/main.html
+++ b/main.html
@@ -238,7 +238,9 @@
 		</tr>
 	</table>
 	
-	<strong>SnapBack's Key Features</strong><Br>
+	<div style="clear: both;"></div>
+	
+	<strong>SnapBack's Key Features</strong><br />
 		<ul>
 			<li>All apps are installed with the platform and kept up-to-date.</li>
 			<li>The platform will not impact system resources or performance.</li>
@@ -288,7 +290,6 @@
 			<li>The Infrastructure / engine requires 6 MB of Drive Space and .6 MB of Memory.</li>
 			<li>The Collection of apps takes up less than 50 MB or Drive Space.</li>
 		</ul>
-	</div>
 			
 </div><!--End Tab3-->
       				
