--- a/main.html
+++ b/main.html
@@ -180,7 +180,7 @@
 <!-- ************************************************ -->
 <div id="app-intro">
 	<div class="app-name">
-		AppTemplate (EDIT ME)
+		Platform Installation
 	</div><!--End #app-name-->
 	
 	<div class="producer-credits">
