Fixed scroll to top of tabs and modified display of release changes

--- a/main.html
+++ b/main.html
@@ -58,10 +58,11 @@
 <!-- ************************************************ -->
 <!--START: Required Scripts - DO NOT EDIT THIS SECTION-->
 <!-- ************************************************ -->
-	<script type="text/javascript">
-		var menuarray = new Array();
-	</script>
-	<script type="text/javascript">
+<script type="text/javascript">
+	var menuarray = new Array();
+   var scrolled = false;
+</script>
+<script type="text/javascript">
       function getRelativeURL()
       {
          var relURL = "";
@@ -180,7 +181,7 @@
 <!-- ************************************************ -->
 <div id="app-intro">
 	<div class="app-name">
-		Platform Installation
+		AppTemplate (EDIT ME)
 	</div><!--End #app-name-->
 	
 	<div class="producer-credits">
